--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/ashleymazzonna/webAppProject/issues"
   },
-  "homepage": "https://github.com/ashleymazzonna/webAppProject#readme"
+  "homepage": "https://github.com/ashleymazzonna/webAppProject#readme",
+  "dependencies": {
+    "jquery": "^3.4.1",
+    "sass": "^1.21.0"
+  }
 }
